# KIST_ROS_TO_REAL

./: README.md
kist_legged_msgs/: CMakeLists.txt  package.xml
kist_legged_real/: CMakeLists.txt  ipconfig.sh  package.xml
kist_legged_real/include/: convert.h
kist_legged_real/include/include_custom_mode/: custommath.h  highlevel_controller.h
kist_legged_real/launch/: real.launch
kist_legged_real/src/exe/: custom_mode.cpp  position_mode.cpp  torque_mode.cpp  velocity_mode.cpp  walk_mode.cpp
kist_legged_real/src/exe/src_custom_mode/: highlevel_controller.cpp  robotmodel.cpp
