<?xml version="1.0"?>

<package format="2">
  <name>kist_legged_msgs</name>
  <version>0.0.0</version>
  <description>
    The test messgaes package.
  </description>
  <maintainer email="yisoo.lee@kist.re.kr">kist</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
</package>